# google-discover-ads-parser

./: .gitignore  LICENSE  README.md  config.toml  fleet.toml  main.dump.py  main.py  pyproject.toml
googleadsparser/: __init__.py  config.py  debug.py  models.py  scraper.py  selectors.py
tests/: test_config.py  test_scraper_logic.py
